# rcsb-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  server.json
.claude/: settings.local.json
docs/: additional-setups.md
evals/: README.md  rcsb_pdb_eval.xml
evals/tool_selection/: README.md  eval_cases.py  eval_diff.py  eval_run.py  probes.xml  run_probes.py
k8s/helm/values/: production.yaml
prompts/: pdb-assistant.md
scripts/: generate_chemical_attributes.py
src/rcsb_mcp/: chemical_search_attributes.py  graphql_queries.py  queries.py  search_attributes.py  server.py  test_queries.py
src/rcsb_mcp/prompts/: pdb_assistant.md
tests/: test_queries.py  test_server.py  test_tool_descriptions.py
